--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "memdown-sync",
   "description": "An drop-in replacement for LevelDOWN that works in memory only with sync supports",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "homepage": "https://github.com/snowyu/node-memdown-sync",
   "contributors": [
     "Riceball LEE <snowyu.lee@gmail.com> (https://github.com/snowyu)",
@@ -23,8 +23,8 @@
   "dependencies": {
     "inherits": "~2.0.1",
     "ltgt": "~1.0.2",
-    "functional-red-black-tree": "^1.0.1",
-    "abstract-nosql": "~1.4.0"
+    "functional-red-black-tree": "~1.0.1",
+    "abstract-nosql": "~1.5.0"
   },
   "devDependencies": {
     "tape": "*",
