--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "memdown-sync",
   "description": "An drop-in replacement for LevelDOWN that works in memory only with sync supports",
-  "version": "1.4.0",
+  "version": "1.4.2",
   "homepage": "https://github.com/snowyu/node-memdown-sync",
   "contributors": [
     "Riceball LEE <snowyu.lee@gmail.com> (https://github.com/snowyu)",
@@ -21,16 +21,18 @@
     "url": "https://github.com/snowyu/node-memdown-sync.git"
   },
   "dependencies": {
+    "abstract-nosql": "~1.8.0",
+    "abstract-object": "~1.2.2",
+    "functional-red-black-tree": "~1.0.1",
     "inherits": "~2.0.1",
     "ltgt": "~1.0.2",
-    "functional-red-black-tree": "~1.0.1",
-    "abstract-nosql": "~1.7.0"
+    "nosql-stream": "~1.1.0"
   },
   "devDependencies": {
-    "tape": "*",
-    "rimraf": "*",
     "bench": "*",
-    "faucet": "*"
+    "faucet": "*",
+    "rimraf": "*",
+    "tape": "*"
   },
   "browser": {
     "rimraf": false
