--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "database",
     "data",
     "store",
+    "storage",
     "memory"
   ],
   "main": "./memdown.js",
@@ -22,14 +23,16 @@
     "url": "https://github.com/snowyu/node-nosql-memdb.git"
   },
   "dependencies": {
+    "abstract-error": "^1.0.1",
     "abstract-iterator": ">=0.11.5",
     "abstract-nosql": "~2.0.1",
-    "abstract-object": "~1.7.0",
+    "abstract-object": "~2.1.5",
     "functional-red-black-tree": "~1.0.1",
     "ltgt": "~1.0.2"
   },
   "devDependencies": {
     "bench": "*",
+    "events-ex": "^1.1.2",
     "faucet": "*",
     "rimraf": "*",
     "tape": "*"
