--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nosql-memdb",
   "description": "Nosql database that works in memory only inherits from abstract-nosql",
-  "version": "2.0.3",
+  "version": "2.1.0",
   "homepage": "https://github.com/snowyu/node-nosql-memdb",
   "contributors": [
     "Riceball LEE <snowyu.lee@gmail.com> (https://github.com/snowyu)",
@@ -25,9 +25,9 @@
   "dependencies": {
     "abstract-error": "^1.0.1",
     "abstract-iterator": ">=0.11.5",
-    "abstract-nosql": "~2.0.1",
-    "abstract-object": "~2.1.5",
+    "abstract-nosql": "~2.1.0",
     "functional-red-black-tree": "~1.0.1",
+    "inherits-ex": "^1.0.6",
     "ltgt": "~1.0.2"
   },
   "devDependencies": {
