--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "rimraf": false
   },
   "scripts": {
+    "prepublish": "coffee -c *.coffee",
     "test": "node ./test.js --stderr | faucet"
   },
   "testling": {
