--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ node_js:
 branches:
   only:
     - master
+before_install:
+  - npm install -g coffee-script
 notifications:
   email:
     - snowyu.lee@gmail.com
